# piper_vla

./: .gitignore  README.md  pyproject.toml
configs/: calibration_samples.example.yaml  pick_calibration.example.yaml  pick_calibration.yaml  pure_vla_gate.example.json  safety.example.yaml
examples/: sample_actions.json
logs/: piper_vla_guard_20260706_142441.jsonl  piper_vla_guard_20260706_171026.jsonl  piper_vla_guard_20260706_172034.jsonl  piper_vla_guard_20260706_173455.jsonl  piper_vla_guard_20260706_174344.jsonl  piper_vla_guard_20260706_175340.jsonl  piper_vla_guard_20260706_180022.jsonl  piper_vla_guard_20260706_180547.jsonl  piper_vla_guard_20260706_180811.jsonl  piper_vla_guard_20260708_141411.jsonl  piper_vla_guard_20260708_142654.jsonl  piper_vla_guard_20260708_144520.jsonl  piper_vla_guard_20260708_144946.jsonl  piper_vla_guard_20260708_145531.jsonl  piper_vla_guard_20260708_145928.jsonl  piper_vla_guard_20260708_150229.jsonl  piper_vla_guard_20260708_150447.jsonl
piper_vla_guard/: __init__.py  actions.py  calibration_calculator.py  camera_adapter.py  config.py  executor.py  hybrid_pick.py  kinematics.py  logging_utils.py  observation_replay.py  pick_calibration.py  piper_adapter.py  piper_test.py  policy_adapter.py  real_loop.py  safety.py  types.py  ui_app.py  utils.py
piper_vla_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: activate_can0.sh  install_openpi_client_uv.sh  run_guard_uv.sh  run_real_guard_uv.sh  run_ui.sh
tests/: test_pick_pipeline.py  test_safety.py
