[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-vla-guard"
version = "0.1.0"
description = "Human-in-the-loop safety wrapper UI for OpenPI/pi0 action chunks before executing on AgileX Piper via piper_sdk."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Generated with ChatGPT"}]
dependencies = [
    "gradio>=4.44",
    "matplotlib>=3.6",
    "numpy>=1.23",
    "pandas>=1.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
piper = ["piper_sdk>=0.6.0", "python-can>=3.3.4"]
openpi = []
vision = ["opencv-python>=4.8"]
dev = ["pytest>=7.0"]

[project.scripts]
piper-vla-guard-ui = "piper_vla_guard.ui_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piper_vla_guard*"]
