[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-vla-guard"
version = "0.1.0"
description = "Human-in-the-loop safety wrapper UI for OpenPI/pi0 action chunks before executing on AgileX Piper via piper_sdk."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Generated with ChatGPT"}]
dependencies = [
    "gradio>=4.44",
    "matplotlib>=3.6",
    "numpy>=1.23,<2.0",
    "pandas>=1.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
piper = [
    "piper-sdk @ git+https://github.com/agilexrobotics/piper_sdk.git@1_0_0_beta",
    "python-can>=3.3.4",
]
openpi = ["openpi-client"]
vision = ["opencv-python>=4.8"]
ros = ["roslibpy>=1.8"]
dev = ["pytest>=7.0"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
piper-vla-guard-ui = "piper_vla_guard.ui_app:main"
piper-vla-real-loop = "piper_vla_guard.real_loop:main"
piper-vla-replay = "piper_vla_guard.observation_replay:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piper_vla_guard*"]

[tool.pytest.ini_options]
python_files = ["tests/test_*.py"]

[tool.uv.sources]
openpi-client = { path = "../docker_vla_share_clean/workspace/openpi_vla_proj/packages/openpi-client", editable = true }
